# hebbian-mind-enterprise

./: .dockerignore  .env.example  .gitattributes  .gitignore  CHANGELOG.md  DEPLOYMENT.md  DOCKER_DEPLOYMENT_SUMMARY.md  Dockerfile  EULA.md  ISSUES_FOUND.md  LICENSE  MANIFEST.in  PACKAGE_SUMMARY.md  README.md  README_DOCKER.md  REFACTOR_NOTES.md  SECURITY.md  docker-compose.yml  glama.json  pyproject.toml  pytest.ini  server.json
.github/workflows/: ci.yml  release.yml  tests.yml
benchmarks/: benchmark_performance.py
src/hebbian_mind/: __init__.py  __main__.py  config.py  decay.py  server.py
src/hebbian_mind/core/: __init__.py
src/hebbian_mind/data/: nodes.json  nodes_v2.json
tests/: DELIVERY_SUMMARY.md  README.md  TEST_SUITE_SUMMARY.md  __init__.py  conftest.py  run_tests.py  test_decay.py  test_error_sanitization.py  test_graph.py  test_hebbian.py  test_mcp_server.py  test_persistence.py  test_phase1_fixes.py  verify_test_suite.py
